Accessibility Fixes 1. [WCAG 1.3.1] Further <ul><li> fixes for suds-menu 1a. Updated sgds-menu documentation 1b. Remove left border for 2nd level navigation due to html structure changes 2. Wrap contents with proper landmarks 3. Increase code snippet’s color contrast 4. Added aria-label for masthead 5. Remove font awesome css

--- a/sgds/sass/sgds-components/_sgds-menu.scss
+++ b/sgds/sass/sgds-components/_sgds-menu.scss
@@ -66,12 +66,6 @@ $menu-label-color: $text-light !default;
       line-height: 2rem;
       margin: 0;
 
-      ul {
-        border-left: 1px dotted $menu-item-active-color;
-        margin: 1em;
-        padding-left: 1em;
-      }
-
       &.second-level-nav-header {
         &.is-active + div.second-level-nav-div {
           display: block;
